CHANGELOG

When		Who		What
======================================================================================
2017-03-07 	Richard Forth   Added Verbose message to start of PHP Fatal
				Checks, Closes #139
2017-02-28 	Richard Forth   Added en_AU to locale Preflight Check, Closes #137
2017-02-24 	Richard Forth   Preflight Check requires en_US or en_GB, Closes #127
2017-02-24 	Richard Forth   PHP No longer a hard requirement. Closes #128
2017-02-24 	Richard Forth   Removed blocking code when PHP binary not found.
2017-02-09 	Richard Forth   Removed some obsolete lines of code.
2017-02-05 	Richard Forth   Moved all the github messaging into comments
				at the top of the file, rather than in output.
2017-02-05 	Richard Forth   Added wiki page and better documentation and
				error messaging around the parent PID, if the
				script exists because it is greater than 50MB
				- addresses issue #110
2017-02-03 	Richard Forth   Changed the logo for a more subtle and
				professional, simple, and clean look.
2017-01-28 	Richard Forth   Fixed #102 rpm error on ubuntu systems.
				- hardcoded "MySQL" in to detection string rather than
				adding lines and lines of unnecessary code trying to
				get the actual MySQL variant. I decided it wasnt that
				important to warrant the extra payload trying to
				ascertain the right OS.
				 - this change backs out the fix used to address issue
				#62 (MariaDB incorrectly identified as MySQL).
2017-01-28 	Richard Forth   Fixed #103 Spelling mistake.
2017-01-26 	Richard Forth   Fix version support cleanup and verbosity fixes.
2017-01-26 	Richard Forth   Fixed some punctuation issues and color warning.
2017-01-26 	Richard Forth   Fixed some breakages on Centos 5, 6, 7
				 - Added a warning that Centos 5 / RHEL 5 is being
				deprecated / EOLed in March 2017, so after this time
				I will not be supporting CentOS5 any more.
2017-01-65 	Richard Forth   Fixed #88 Unable to determine whether Apache is using 
				worker or prefork